--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.49.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
     "sass": "^1.74.1",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vue-eslint-parser": "^8.0.0"
   }
 }
