--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@types/aos": "^3.0.7",
@@ -34,6 +35,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.52.0",
     "eslint-plugin-vue": "^9.17.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2",
     "sass": "^1.74.1",
